--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -101,7 +101,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButton">
+                <widget class="QPushButton" name="debugButton">
                  <property name="text">
                   <string>GetData</string>
                  </property>
