--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -112,6 +112,12 @@
                  <property name="styleSheet">
                   <string notr="true">background-color: rgb(255, 255, 255);</string>
                  </property>
+                 <attribute name="horizontalHeaderVisible">
+                  <bool>false</bool>
+                 </attribute>
+                 <attribute name="verticalHeaderVisible">
+                  <bool>false</bool>
+                 </attribute>
                 </widget>
                </item>
               </layout>
@@ -136,14 +142,24 @@
              <widget class="QLabel" name="label_2">
               <property name="geometry">
                <rect>
-                <x>170</x>
-                <y>190</y>
+                <x>140</x>
+                <y>0</y>
                 <width>131</width>
                 <height>111</height>
                </rect>
               </property>
               <property name="text">
                <string>graphs</string>
+              </property>
+             </widget>
+             <widget class="QTableView" name="debugTableView">
+              <property name="geometry">
+               <rect>
+                <x>70</x>
+                <y>170</y>
+                <width>256</width>
+                <height>192</height>
+               </rect>
               </property>
              </widget>
             </widget>
