--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,42 +7,35 @@
     <x>0</x>
     <y>0</y>
     <width>450</width>
-    <height>602</height>
+    <height>603</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>451</width>
-      <height>541</height>
-     </rect>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="spacing">
+     <number>1</number>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QStackedWidget" name="mwStackedWidget">
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="currentIndex">
-        <number>0</number>
-       </property>
-       <widget class="QWidget" name="timePage">
-        <widget class="QWidget" name="layoutWidget">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>451</width>
-           <height>511</height>
-          </rect>
-         </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QStackedWidget" name="mwStackedWidget">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="timePage">
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
          <layout class="QVBoxLayout" name="verticalLayout_2">
+          <property name="spacing">
+           <number>1</number>
+          </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
@@ -83,45 +76,47 @@
              <string notr="true"/>
             </property>
             <widget class="QWidget" name="presentTimePage">
-             <widget class="QWidget" name="layoutWidget">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>451</width>
-                <height>481</height>
-               </rect>
+             <layout class="QVBoxLayout" name="verticalLayout_3">
+              <property name="spacing">
+               <number>1</number>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout_3">
-               <item>
-                <widget class="QListView" name="currentActivitiesListView">
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(255, 255, 255);</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="debugButton">
-                 <property name="text">
-                  <string>GetData</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QTableView" name="activitiesTableView">
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(255, 255, 255);</string>
-                 </property>
-                 <attribute name="horizontalHeaderVisible">
-                  <bool>false</bool>
-                 </attribute>
-                 <attribute name="verticalHeaderVisible">
-                  <bool>false</bool>
-                 </attribute>
-                </widget>
-               </item>
-              </layout>
-             </widget>
+              <item>
+               <widget class="QListView" name="currentActivitiesListView">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(255, 255, 255);</string>
+                </property>
+                <property name="resizeMode">
+                 <enum>QListView::Adjust</enum>
+                </property>
+                <property name="gridSize">
+                 <size>
+                  <width>100</width>
+                  <height>100</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="debugButton">
+                <property name="text">
+                 <string>GetData</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QTableView" name="activitiesTableView">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(255, 255, 255);</string>
+                </property>
+                <attribute name="horizontalHeaderVisible">
+                 <bool>false</bool>
+                </attribute>
+                <attribute name="verticalHeaderVisible">
+                 <bool>false</bool>
+                </attribute>
+               </widget>
+              </item>
+             </layout>
             </widget>
             <widget class="QWidget" name="historyTimePage">
              <widget class="QLabel" name="label">
@@ -166,77 +161,89 @@
            </widget>
           </item>
          </layout>
-        </widget>
-       </widget>
-       <widget class="QWidget" name="plansPage">
-        <widget class="QLabel" name="label_3">
-         <property name="geometry">
-          <rect>
-           <x>170</x>
-           <y>180</y>
-           <width>191</width>
-           <height>121</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>plans</string>
-         </property>
-        </widget>
-       </widget>
-       <widget class="QWidget" name="financePage">
-        <widget class="QLabel" name="label_4">
-         <property name="geometry">
-          <rect>
-           <x>170</x>
-           <y>200</y>
-           <width>161</width>
-           <height>131</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>finance</string>
-         </property>
-        </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="plansPage">
+       <widget class="QLabel" name="label_3">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>180</y>
+          <width>191</width>
+          <height>121</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>plans</string>
+        </property>
        </widget>
       </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QPushButton" name="TimeButton">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(0, 132, 26);</string>
-         </property>
-         <property name="text">
-          <string>Time</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="PlansButton">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(0, 85, 255);</string>
-         </property>
-         <property name="text">
-          <string>Plans</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="FinancesButton">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(255, 241, 85);
+      <widget class="QWidget" name="financePage">
+       <widget class="QLabel" name="label_4">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>200</y>
+          <width>161</width>
+          <height>131</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>finance</string>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QPushButton" name="TimeButton">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 132, 26);</string>
+        </property>
+        <property name="text">
+         <string>Time</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="PlansButton">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 85, 255);</string>
+        </property>
+        <property name="text">
+         <string>Plans</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="FinancesButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(255, 241, 85);
 alternate-background-color: rgb(148, 140, 49);</string>
-         </property>
-         <property name="text">
-          <string>Finances</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </widget>
+        </property>
+        <property name="text">
+         <string>Finances</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -244,7 +251,7 @@ alternate-background-color: rgb(148, 140, 49);</string>
      <x>0</x>
      <y>0</y>
      <width>450</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
