--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -216,9 +216,19 @@
               <property name="geometry">
                <rect>
                 <x>70</x>
-                <y>170</y>
+                <y>50</y>
                 <width>256</width>
                 <height>192</height>
+               </rect>
+              </property>
+             </widget>
+             <widget class="QListView" name="debugListView">
+              <property name="geometry">
+               <rect>
+                <x>60</x>
+                <y>240</y>
+                <width>256</width>
+                <height>151</height>
                </rect>
               </property>
              </widget>
