--- a/menuwindow.ui
+++ b/menuwindow.ui
@@ -40,6 +40,19 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QPushButton" name="exportButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Export Data</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
